<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="todo.misapp.com.twotablesinonedb.editarSetting">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/boxbg"
        android:id="@+id/frameLayout6"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="268dp"
            android:layout_height="160dp"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_gravity="left|bottom">


                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/labActividades"
                            android:id="@+id/textView18"
                            android:layout_margin="4dp"
                            android:textColor="#edffffff"
                            android:paddingBottom="0dp"
                            android:layout_gravity="center_vertical" />

                        <Spinner
                            android:layout_width="5dp"
                            android:layout_height="23dp"
                            android:id="@+id/sp2"
                            android:layout_gravity="center"
                            android:layout_column="1"
                            android:background="#ffffffff"
                            android:prompt="@string/actividad_prompt"
                            android:entries="@array/actividades__arrays" />

                        <EditText
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/eActividad"
                            android:background="#ffffffff"
                            android:textColor="#000000"
                            android:onClick="cambiarActividad" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </TableRow>

                    <TableRow android:layout_height="wrap_content"
                        android:layout_width="101dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/labValor"
                            android:id="@+id/textView17"
                            android:textColor="#edffffff"
                            android:layout_gravity="center|right" />

                        <EditText
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/IdEditarValor"
                            android:textColor="#000000"
                            android:background="#ffffffff"
                            android:inputType="numberDecimal"
                            android:width="50dp" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/VEditarTitle"
            android:id="@+id/textView16"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#e3ffffff"
            android:paddingTop="40dp"
            android:paddingLeft="150dp"
            android:paddingRight="50dp"
            android:textSize="40dp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="45dp"
            android:weightSum="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/btnInicio"
                android:id="@+id/IdInicio"
                android:background="@drawable/btnshape2"
                android:onClick="inicio" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/btnSiguiente"
                android:id="@+id/IdSiguiente"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/btnshape2"
                android:onClick="siguiente" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/btnAnterior"
                android:id="@+id/IdAnterior"
                android:layout_gravity="center"
                android:background="@drawable/btnshape2"
                android:onClick="anterior" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/btnUltimo"
                android:id="@+id/IdUltimo"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/btnshape2"
                android:onClick="fin" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/boxbg"
        android:layout_below="@+id/frameLayout5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:text="@string/btnAceptar"
            android:id="@+id/IdBtnAceptar"
            android:layout_gravity="left|top"
            android:background="@drawable/btnshape"
            android:onClick="aceptar" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="164dp"
            android:layout_height="40dp"
            android:text="@string/btnCancelar"
            android:id="@+id/IdBtnCancelar"
            android:layout_gravity="right|top"
            android:background="@drawable/btnshape" />

    </FrameLayout>

</RelativeLayout>
